# Tak-Grad-Project

./: README.md  pyproject.toml  ruff.toml
tak/: main.py
